--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "coding",
     "dev"
   ],
-  "author": "Ryan Fitzgerald",
+  "author": "Mingyuan Li",
   "license": "MIT",
   "dependencies": {
     "@vercel/analytics": "^1.4.0",
